* Fixed service name discovery based on MANIFEST.MF file through `ServletContainerInitializer#onStartup` on Jakarta Servlet containers -
{pull}2546[#2546]
* Fix shaded classloader package definition - {pull}2566[#2566]
* Fix logging initialization with Security Manager - {pull}2568[#2568]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.30.0]]
==== 1.30.0 - 2022/03/22

[float]
===== Potentially breaking changes
* Create the JDBC spans as exit spans- {pull}2484[#2484]
* WebSocket requests are now captured with transaction type request instead of custom - {pull}2501[#2501]

[float]
===== Refactorings
* Logging frameworks instrumentations - {pull}2428[#2428]. This refactoring includes:
** Log correlation now works based on bytecode instrumentation rather than `ActivationListener` that directly updates the MDC
** Merging the different instrumentations (log-correlation, error-capturing and ECS-reformatting) into a single plugin
** Module structure and package naming changes

[float]
===== Features
* Added support for setting service name and version for a transaction via the public api - {pull}2451[#2451]
* Added support for en-/disabling each public annotation on each own - {pull}2472[#2472]
* Added support for compressing spans - {pull}2477[#2477]
* Added microsecond durations with `us` as unit - {pull}2496[#2496]
* Added support for dropping fast exit spans - {pull}2491[#2491]
* Added support for collecting statistics about dropped exit spans - {pull}2505[#2505]
* Making AWS Lambda instrumentation GA - includes some changes in Lambda transaction metadata fields and a dedicated flush HTTP request
to the AWS Lambda extension - {pull}2424[#2424]
* Changed logging correlation to be on by default. This change includes the removal of the now redundant `enable_log_correlation` config
option. If there's a need to disable the log correlation mechanism, this can be done now through the `disable_instrumentations` config -
{pull}2428[#2428]