@@ -107,6 +107,9 @@ public abstract class AbstractSpan<T extends AbstractSpan<T>> implements Recycla
 
     private boolean hasCapturedExceptions;
 
+    @Nullable
+    protected volatile String type;
+
     protected final AtomicReference<Span> bufferedSpan = new AtomicReference<>();
 
     @Nullable
@@ -335,6 +338,16 @@ public abstract class AbstractSpan<T extends AbstractSpan<T>> implements Recycla
         return thiz();
     }
 
+    public T withType(@Nullable String type){
+        this.type = normalizeEmpty(type);
+        return thiz();
+    }
+
+    @Nullable
+    protected static String normalizeEmpty(@Nullable String value) {
+        return value == null || value.isEmpty() ? null : value;
+    }
+
     /**
      * Recorded time of the span or transaction in microseconds since epoch
      */
@@ -350,6 +363,7 @@ public abstract class AbstractSpan<T extends AbstractSpan<T>> implements Recycla
     public void resetState() {
         finished = true;
         name.setLength(0);
+        type = null;
         timestamp.set(0L);
         endTimestamp.set(0L);
         traceContext.resetState();
@@ -465,6 +479,9 @@ public abstract class AbstractSpan<T extends AbstractSpan<T>> implements Recycla
                 name.append("unnamed");
             }
             childDurations.onSpanEnd(epochMicros);
+
+            type = normalizeType(type);
+
             beforeEnd(epochMicros);
             this.finished = true;
             Span buffered = bufferedSpan.get();
@@ -698,6 +715,18 @@ public abstract class AbstractSpan<T extends AbstractSpan<T>> implements Recycla
 
     public Map<String, Object> getOtelAttributes() {
         return otelAttributes;
+    }
+
+    @Nullable
+    public String getType() {
+        return type;
+    }
+
+    private String normalizeType(@Nullable String type) {
+        if (type == null || type.isEmpty()) {
+            return "custom";
+        }
+        return type;
     }
 
 }
